fix(request-card.comp) improve readability of urls

--- a/src/app/request-card/request-card.component.scss
+++ b/src/app/request-card/request-card.component.scss
@@ -4,7 +4,6 @@
   overflow: hidden;
 }
 .card-request {
-  font-size: .8rem;
   word-break: break-all;
   padding: 8px;
   max-width: 200px;
